--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <audio controls> 
          <source src="ceanjr.mp3" type="audio/mp3">
 </center>
-       Cean jr. -YK
+       <h2>Cean jr. -YK</h2>
      </audio> 
 </section>
 
@@ -42,12 +42,12 @@ Of this feelin' I can't hide it to you anymore
 The way you look the way you move you heatin' up the floor
 Babe you got that somethin' special knockin' on my door </br>
 
-           <h3> Chorus: Oh woah </h3>
+        <h3>Chorus:</h3> Oh woah
            Baby you know (baby you know)
            Know I can't control (know I can't control)
            Can't handle this feelin' babe
            Stop teasin' me
-           No I ain't playin' games (ain't no playin' games)</br>
+           No I ain4't playin' games (ain't no playin' games)</br>
 
            <h3>Verse 2:<br></h3>See I just wanna let you know that I don't wanna see you go
            Go ahead and leave me hangin' wishin' yearnin' for some more
@@ -62,10 +62,10 @@ Babe you got that somethin' special knockin' on my door </br>
            Stop teasin' me
            No I ain't playin' games (ain't no playin' games)</br> 
            
-           <h3>Verse 3:<br></h3>Lately I can't go to sleep (uh)
+           <h3>Verse 3:<br>Lately I can't go to sleep (uh)
            Thinking 'bout you at night but honestly (uh)
            Baby you're my remedy
-           For all the pain that's hurtin' me</br>
+           For all the pain that's hurtin' me</h3>
            
            <h3> Chorus: </h3>
            Baby you know (baby you know)
